# WikiSpeedia

./: CMakeLists.txt
wiki_speedia_backend/: AdjacencyList.cpp  AdjacencyList.h  Algorithms.cpp  Algorithms.h  crow_all.h  main.cpp
wiki_speedia_frontend/: package-lock.json  package.json
wiki_speedia_frontend/src/: App.css  App.js
wiki_speedia_frontend/src/components/: graph.js
